# 2DGameCPP

./: CMakeLists.txt  main.cpp
Player/: Player.h  Score.h
environment/: EnvironmentItem.h
player/: Player.h  Projectile.h
